<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Practica6AAD</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_actividad_detalle">ActividadDetalle</string>
    <string name="nuevo">Nuevo Inmueble</string>
    <string name="title_activity_editar">Editar</string>
    <string name="localidad">Localidad</string>
    <string name="calle">Calle</string>
    <string name="numero">Numero</string>
    <string name="tipo">Tipo</string>
    <string name="precio">Precio</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_princi">Princi</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="mas">+</string>
    <string name="actualizar">Actualizar</string>
    <string name="subir">Subir</string>

</resources>
